<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_top_add"
        android:paddingTop="@dimen/margin_top_add"
        android:text="@string/add_title"
        android:textColor="@color/colorTextDark"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/dialog_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/dialog_edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_add"
        android:hint="@string/hint_quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/dialog_edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_add"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_add"
        android:background="@drawable/button"
        android:text="@string/button_select_image"
        android:textColor="@color/colorTextWhite" />

</LinearLayout>