<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="@string/product_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_add"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_list_item"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_info"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_top_add">

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quantity_label"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:id="@+id/text_view_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/list_product_margin"
                    android:layout_toEndOf="@id/quantity_label"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hint_quantity"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    tools:text="@string/product_quantity" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/listing_margin">

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/price_label"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:id="@+id/text_view_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/list_product_margin"
                    android:layout_toEndOf="@id/price_label"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hint_price"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    tools:text="@string/product_price" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/blue_button"
                android:focusable="false"
                android:text="@string/button_sell" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>