<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quantity_label"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_top_add">

        <Button
            android:id="@+id/button_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/zero"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button"
            android:text="@string/plus" />

    </LinearLayout>

</LinearLayout>